--- a/frontend/src/components/DepartmentListItem/style.module.css
+++ b/frontend/src/components/DepartmentListItem/style.module.css
@@ -6,13 +6,17 @@
   border-bottom: 1px solid rgb(165, 165, 165);
 }
 
+.employee-info {
+  width: 200px;
+}
+
 .name {
   color: rgba(0, 0, 0, 0.8);
   margin-bottom: 5px;
   font-size: 15px;
 }
 .position {
-  background: #E2E2E2;
+  background: #e0e3e6;
   color: #575757;
   font-family: monospace;
   width: 28px;
@@ -23,7 +27,7 @@
   border-radius: 2px;
 }
 
-.email, .phone {
+.role {
   color: rgba(0, 0, 0, 0.7);
   font-size: 13px;
   line-height: 1.3rem;
@@ -50,8 +54,14 @@
 
 .profile-pic {
   width: 50px;
-  height: 50px;
-  border-radius: 50%;
+    display: flex;
+    align-items: center;
+    color: #839c8e;
+    justify-content: center;
+    height: 50px;
+    font-weight: bold;
+    background: #e6e6e6;
+    border-radius: 50%;
 }
 
 .delete-button {
