--- a/frontend/src/components/List/style.module.css
+++ b/frontend/src/components/List/style.module.css
@@ -1,24 +1,24 @@
 .section-title {
-  padding: 25px 25px 20px 25px;
-  border-bottom: 1px solid rgb(165, 165, 165);
+  padding: 1.5625rem 1.5625rem 1.25rem 1.5625rem;
+  border-bottom: 0.0625rem solid var(--border-color);
   font-family: 'Avenir Next';
-  color: #555c64;
+  color: var(--font-color);
 }
 
 .button {
-  border: 1px solid #646464;
-  border-radius: 2px;
-  color: rgba(0, 0, 0, 0.733);
-  padding: 10px;
-  font-size: 13px;
+  border: 0.0625rem solid var(--border-color);
+  border-radius: 0.125rem;
+  color: var(--font-color);
+  padding: 0.625rem;
+  font-size: 0.8125rem;
   text-align: center;
-  width: 100px;
-  height: 38px;
+  width: 6.25rem;
+  height: 2.375rem;
   cursor: pointer;
 }
 
 .active {
-  background: #08A650;
+  background: var(--primary-color);
     border: none;
     font-weight: bold;
     color: white;
@@ -33,10 +33,10 @@
   display: flex;
     justify-content: center;
     align-items: center;
-    margin: 40px 0 0 0;
+    margin: 2.5rem 0 0 0;
 }
 .pager > span {
-  margin: 0 20px;
+  margin: 0 1.25rem;
   font-family: monospace;
-  color: #5a5a5a;
+  color: var(--font-color);
 }
