--- a/frontend/src/components/Container/style.module.css
+++ b/frontend/src/components/Container/style.module.css
@@ -1,28 +1,28 @@
 @media only screen and (min-width: 768px ) {
   .header {
-    padding: 0 25px;
+    padding: 0 1.5625rem;
     display: flex;
     justify-content: space-between;
   }
 
   .project-name {
-    color: #555c64;
+    color: var(--author-color);
     font-family: 'Avenir Next';
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 0.3125rem;
   }
   .project-author {
-    color: #585e64;
+    color: var(--author-color);
     font-weight: 300;
-    font-size: 11px;
+    font-size: 0.6875rem;
     font-family: 'American-Typewriter';
   }
   .container {
-    width: 520px;
-    height: 590px;
-    background: white;
-    border: 1px solid #687181b7;
-    border-radius: 4px;
+    width: 32.5rem;
+    height: 36.875rem;
+    background: var(--bg-color);
+    border: 0.0625rem solid var(--border-color);
+    border-radius: 0.25rem;
     margin: 0;
     position: absolute;
     top: 50%;
@@ -32,14 +32,15 @@
   }
   
   .logo {
-    height: 55px;
+    height: 3.4375rem;
   }
   .logo > svg {
-    width: 120px;
-    height: 60px;
+    width: 7.5rem;
+    height: 3.75rem;
+    fill: var(--logo-font-color);
   }
   .create-button-container {
-    margin-top: 20px;
+    margin-top: 1.25rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
