--- a/frontend/src/components/DeleteBox/style.module.css
+++ b/frontend/src/components/DeleteBox/style.module.css
@@ -1,24 +1,29 @@
 .delete-form {
-  padding: 0 40px;
+  padding: 0 2.5rem;
 }
 
 .input {
-  border-radius: 2px;
+  border-radius: 0.125rem;
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
-  margin-bottom: 8px;
-  border: 1px solid rgb(138, 138, 138);
-  height: 40px;
-  font-size: 15px;
+  margin-bottom: 0.5rem;
+  background: var(--menu-bg-color);
+  border: 0.0625rem solid var(--border-color);
+  height: 2.5rem;
+  font-size: 0.9375rem;
   width: 100%;
-  padding: 0 10px;
-  color: rgb(78, 78, 78);
-  caret-color: #08A650;
+  padding: 0 0.625rem;
+  color: var(--font-color);
+  caret-color: var(--primary-color);
+}
+
+.input::placeholder {
+  color: var(--font-color);
 }
 
 .input:focus {
-  outline: #08A650;
+  outline: var(--primary-color);
 }
 
 .form-control-container {
@@ -31,40 +36,40 @@
 
 .form-control {
   display: flex;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 
 .button {
-  border: 1px solid #646464;
-  border-radius: 2px;
-  color: rgba(0, 0, 0, 0.733);
-  padding: 10px;
-  font-size: 13px;
+  border: 0.0625rem solid var(--border-color);
+  border-radius: 0.125rem;
+  color: var(--font-color);
+  padding: 0.625rem;
+  font-size: 0.8125rem;
   text-align: center;
-  width: 100px;
-  height: 38px;
+  width: 6.25rem;
+  height: 2.375rem;
   cursor: pointer;
 }
 
 .buttons {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 
 .note {
-  color: rgba(0, 0, 0, 0.7);
-  font-size: 13px;
+  color: var(--logo-font-color);
+  font-size: 1rem;
   font-style: italic;
   font-family: monospace;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .delete {
-  margin-right: 20px;
+  margin-right: 1.25rem;
   background: #b81d1d;
   color: white;
   font-weight: bold;
-  border: 1px solid transparent;
+  border: 0.0625rem solid transparent;
 }
