--- a/frontend/src/components/DepartmentListItem/style.module.css
+++ b/frontend/src/components/DepartmentListItem/style.module.css
@@ -2,65 +2,65 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  padding: 20px 0;
-  border-bottom: 1px solid rgb(165, 165, 165);
+  padding: 1.25rem 0;
+  border-bottom: 0.0625rem solid var(--border-color);
 }
 
 .employee-info {
-  width: 200px;
+  width: 12.5rem;
 }
 
 .name {
-  color: rgba(0, 0, 0, 0.8);
-  margin-bottom: 5px;
-  font-size: 15px;
+  color: var(--font-color);
+  margin-bottom: 0.3125rem;
+  font-size: 0.9375rem;
 }
 .position {
-  background: #e0e3e6;
-  color: #575757;
+  background: var(--menu-bg-color);
+  color: var(--font-color);
   font-family: monospace;
-  width: 28px;
-  height: 25px;
+  width: 1.75rem;
+  height: 1.5625rem;
   display: flex;
   align-items: center;
   justify-content: center;;
-  border-radius: 2px;
+  border-radius: 0.125rem;
 }
 
 .role {
-  color: rgba(0, 0, 0, 0.7);
-  font-size: 13px;
+  color: var(--font-color);
+  font-size: 1rem;
   line-height: 1.3rem;
   font-family: monospace;
 }
 
 .edit-button {
-  border: 1px solid #646464;
-  border-radius: 2px;
-  color: rgba(0, 0, 0, 0.733);
-  padding: 10px;
-  font-size: 13px;
+  border: 0.0625rem solid var(--border-color);
+  border-radius: 0.125rem;
+  color: var(--font-color);
+  padding: 0.625rem;
+  font-size: 0.8125rem;
   text-align: center;
-  width: 85px;
-  height: 38px;
+  width: 5.3125rem;
+  height: 2.375rem;
   cursor: pointer;
 }
 .edit-button:hover {
-  background: #08A650;
+  background: var(--primary-color);
   color: white;
   font-weight: bold;
-  border: 1px solid transparent;
+  border: 0.0625rem solid transparent;
 }
 
 .profile-pic {
-  width: 50px;
+  width: 3.125rem;
     display: flex;
     align-items: center;
     color: #839c8e;
     justify-content: center;
-    height: 50px;
+    height: 3.125rem;
     font-weight: bold;
-    background: #e6e6e6;
+    background: var(--menu-bg-color);
     border-radius: 50%;
 }
 
