--- a/frontend/src/components/EmptyBox/style.module.css
+++ b/frontend/src/components/EmptyBox/style.module.css
@@ -1,13 +1,13 @@
 .empty-box {
-  border: 2px dashed rgba(0, 0, 0, 0.527);
+  border: 0.125rem dashed var(--border-color);
   width: 80%;
-  color: rgb(65, 65, 65);
-  padding: 20px;
+  color: var(--font-color);
+  padding: 1.25rem;
   text-align: center;
   margin: 0 auto;
-  margin-top: 50px;
-  border-radius: 2px;
-  font-size: 14px;
+  margin-top: 3.125rem;
+  border-radius: 0.125rem;
+  font-size: 1rem;
   font-family: monospace;
   line-height: 1.6rem;
 }
