--- a/frontend/src/components/Menu/style.module.css
+++ b/frontend/src/components/Menu/style.module.css
@@ -1,6 +1,6 @@
 .menu-container {
-  padding: 35px 25px 25px 25px;
-  border-bottom: 1px solid rgb(165, 165, 165);
+  padding: 2.1875rem 1.5625rem 1.5625rem 1.5625rem;
+  border-bottom: 0.0625rem solid var(--border-color);
   font-family: 'Avenir Next';
   color: #555c64;
   display: flex;
@@ -8,24 +8,24 @@
 
 .menu-option {
   cursor: pointer;
-  font-size: 14px;
-  margin-right: 10px;
-  border: 1px solid #646464;
-  padding: 8px 15px;
-  border-radius: 20px;
+  font-size: 0.875rem;
+  margin-right: 0.625rem;
+  border: 0.0625rem solid var(--border-color);
+  padding: 0.5rem 0.9375rem;
+  border-radius: 1.25rem;
   opacity: 0.7;
   text-transform: capitalize;
 }
 
 .menu-option:hover {
   opacity: 1;
-  border: 1px solid #646464;
-  color: #394149;
+  border: 0.0625rem solid var(--border-color);
+  color: var(--font-color);
 }
 
 .selected {
   opacity: 1;
-  border: 1px solid #646464;
-  background: #f0f0f0;
-  color: #495158;
+  border: 0.0625rem solid var(--border-color);
+  background: var(--menu-bg-color);
+  color: var(--font-color);
 }
