--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,7 +27,7 @@ html {
 body {
   width: 100%;
   height: 100%;
-  background: rgb(247, 247, 247);
+  background: var(--bg-color);
 }
 
 @-moz-document url-prefix() {
@@ -39,13 +39,23 @@ body {
 }
 
 :root {
-  --main-blue: #091423;
-  --main-blue-highlight: #040f1c;
-  --main-blue: #061016;
-  --main-blue-highlight: #02070a;
-  --main-blue: #0a1923;
-  --main-blue-highlight: #06141c;
-  --menu-line: rgb(255, 255, 255, 0.08);
+  --primary-color: #08a650;
+  --font-color: #495158;
+  --menu-bg-color: #ebebeb;
+  --bg-color: rgb(247 247 247);
+  --logo-font-color: black;
+  --border-color: #687181b7;
+  --author-color: #555c64;
+}
+
+[data-theme="dark"] {
+  --primary-color: #08a650;
+  --font-color: #98a2ab;
+  --menu-bg-color: #1d2b33;
+  --logo-font-color: white;
+  --author-color: #bec7c2;
+  --border-color: #383c44;
+  --bg-color: rgb(21 32 43);
 }
 
 code {
